fonts and font-awesome

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,14 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mali&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/6edd678966.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <noscript>
